--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -1,1 +1,14 @@
-buildPack: go
+buildPack: none
+pipelineConfig:
+  pipelines:
+    pullRequest:
+      pipeline:
+        agent:
+          image: mellardc/potato
+        stages:
+          - name: build
+            steps:
+              - name: build-and-push-image
+                image: mellardc/potato
+                command: /kaniko/executor
+                args: ['--dockerfile=Dockerfile','--destination=tfjxlegibledog.azurecr.io/potato']
