--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -4,7 +4,7 @@ pipelineConfig:
     pullRequest:
       pipeline:
         agent:
-          image: mellardc/potato
+          image: mellardc/potato:1.0
         stages:
           - name: build
             steps:
