--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -4,11 +4,11 @@ pipelineConfig:
     pullRequest:
       pipeline:
         agent:
-          image: gcr.io/kaniko-project/executor:a310cc6d1cd449f95cedd23393de766fdc649651
+          image: mellardc/potato
         stages:
           - name: build
             steps:
               - name: build-and-push-image
-                image: gcr.io/kaniko-project/executor:a310cc6d1cd449f95cedd23393de766fdc649651
+                image: mellardc/potato
                 command: /kaniko/executor
                 args: ['--dockerfile=Dockerfile','--destination=tfjxlegibledog.azurecr.io/potato', "--context=/workspace/source"]
