--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -4,11 +4,11 @@ pipelineConfig:
     pullRequest:
       pipeline:
         agent:
-          image: mellardc/potato:1.0
+          image: gcr.io/kaniko-project/executor:9912ccbf8d22bbafbf971124600fbb0b13b9cbd6
         stages:
           - name: build
             steps:
               - name: build-and-push-image
-                image: mellardc/potato:1.0
                 command: /kaniko/executor
+                image: gcr.io/kaniko-project/executor:9912ccbf8d22bbafbf971124600fbb0b13b9cbd6
                 args: ['--dockerfile=Dockerfile','--destination=tfjxlegibledog.azurecr.io/potato', "--context=/workspace/source"]
