--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -12,9 +12,9 @@ pipelineConfig:
                 - name: dconf
                   secret:
                     secretName: jenkins-docker-cfg
-#                    items:
-#                      - key: config.json
-#                        path: /kaniko/.docker/config.json
+                    items:
+                    - key: config.json
+                      path: kaniko/.docker/config.json
               containerOptions:
                 volumeMounts:
                   - name: dconf
