--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -25,13 +25,13 @@ pipelineConfig:
                 image: mellardc/potato:3.0
                 args: ['--dockerfile=Dockerfile','--destination=tfjxlegibledog.azurecr.io/potato', "--context=/workspace/source"]
 
-                env:
-                  - name: AZURE_TENANT_ID
-                    value: df8eac07-e025-4521-80e8-6b66838cb092
-                  - name: AZURE_CLIENT_ID
-                    value: ba864fb9-403a-4549-b330-68d8de43a6c2
-                  - name: AZURE_CLIENT_SECRET
-                    valueFrom:
-                      secretKeyRef:
-                        name: jx-terra-test
-                        key: AZURE_CLIENT_SECRET
+#                env:
+#                  - name: AZURE_TENANT_ID
+#                    value: df8eac07-e025-4521-80e8-6b66838cb092
+#                  - name: AZURE_CLIENT_ID
+#                    value: ba864fb9-403a-4549-b330-68d8de43a6c2
+#                  - name: AZURE_CLIENT_SECRET
+#                    valueFrom:
+#                      secretKeyRef:
+#                        name: jx-terra-test
+#                        key: AZURE_CLIENT_SECRET
