--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -1,23 +1,23 @@
-buildPack: none
-pipelineConfig:
-  pipelines:
-    pullRequest:
-      pipeline:
-        agent:
-          image: mellardc/potato:5.0
-        stages:
-          - name: build
-            options:
-              volumes:
-                - name: dconf
-                  secret:
-                    secretName: jenkins-docker-cfg
-              containerOptions:
-                volumeMounts:
-                  - name: dconf
-                    mountPath: /kaniko/.docker
-            steps:
-              - name: build-and-push-image
-                command: /kaniko/executor
-                image: mellardc/potato:5.0
-                args: ['--dockerfile=Dockerfile','--destination=tfjxlegibledog.azurecr.io/potato', "--context=/workspace/source"]
+buildPack: go
+#pipelineConfig:
+#  pipelines:
+#    pullRequest:
+#      pipeline:
+#        agent:
+#          image: mellardc/potato:5.0
+#        stages:
+#          - name: build
+#            options:
+#              volumes:
+#                - name: dconf
+#                  secret:
+#                    secretName: jenkins-docker-cfg
+#              containerOptions:
+#                volumeMounts:
+#                  - name: dconf
+#                    mountPath: /kaniko/.docker
+#            steps:
+#              - name: build-and-push-image
+#                command: /kaniko/executor
+#                image: mellardc/potato:5.0
+#                args: ['--dockerfile=Dockerfile','--destination=tfjxlegibledog.azurecr.io/potato', "--context=/workspace/source"]
