--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -4,8 +4,7 @@ pipelineConfig:
     pullRequest:
       pipeline:
         agent:
-#          image: mellardc/potato:5.0
-          image: gcr.io/kaniko-project/executor:debug-a310cc6d1cd449f95cedd23393de766fdc649651
+          image: mellardc/potato:6.0
         stages:
           - name: build
 #            options:
@@ -20,9 +19,8 @@ pipelineConfig:
             steps:
               - name: build-and-push-image
 #                command: /kaniko/executor
-#                image: mellardc/potato:5.0
+                image: mellardc/potato:6.0
 #                args: ['--dockerfile=Dockerfile','--destination=tfjxlegibledog.azurecr.io/potato', "--context=/workspace/source"]
-                image: gcr.io/kaniko-project/executor:debug-a310cc6d1cd449f95cedd23393de766fdc649651
                 command: /busybox/cat
                 args: ['/tekton/home/.docker/config.json']
                 env:
