--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -21,7 +21,7 @@ pipelineConfig:
 #                command: /kaniko/executor
                 image: mellardc/potato:6.0
 #                args: ['--dockerfile=Dockerfile','--destination=tfjxlegibledog.azurecr.io/potato', "--context=/workspace/source"]
-                command: cat
+                command: /bin/cat
                 args: ['/tekton/home/.docker/config.json']
                 env:
                   - name: DOCKER_CONFIG
