--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -1,28 +1,21 @@
-buildPack: go
-#pipelineConfig:
-#  pipelines:
-#    pullRequest:
-#      pipeline:
-#        agent:
-#          image: mellardc/potato:6.0
-#        stages:
-#          - name: build
-##            options:
-##              volumes:
-##                - name: dconf
-##                  secret:
-##                    secretName: jenkins-docker-cfg
-##              containerOptions:
-##                volumeMounts:
-##                  - name: dconf
-##                    mountPath: /kaniko/.docker
-#            steps:
-#              - name: build-and-push-image
-##                command: /kaniko/executor
-#                image: mellardc/potato:6.0
-##                args: ['--dockerfile=Dockerfile','--destination=tfjxlegibledog.azurecr.io/potato', "--context=/workspace/source"]
-#                command: /bin/cat
-#                args: ['/tekton/home/.docker/config.json']
-#                env:
-#                  - name: DOCKER_CONFIG
-#                    value: /tekton/home/.docker
+#buildPack: go
+pipelineConfig:
+  pipelines:
+    pullRequest:
+      pipeline:
+        agent:
+          image: mellardc/potato:6.0
+        stages:
+          - name: build
+            containerOptions:
+              serviceAccountName: potato
+            steps:
+              - name: build-and-push-image
+#                command: /kaniko/executor
+                image: mellardc/potato:6.0
+#                args: ['--dockerfile=Dockerfile','--destination=tfjxlegibledog.azurecr.io/potato', "--context=/workspace/source"]
+                command: /bin/cat
+                args: ['/tekton/home/.docker/config.json']
+                env:
+                  - name: DOCKER_CONFIG
+                    value: /tekton/home/.docker
