--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -12,11 +12,6 @@ pipelineConfig:
                 serviceAccountName: potato
             steps:
               - name: build-and-push-image
-#                command: /kaniko/executor
+                command: /kaniko/executor
                 image: mellardc/potato:6.0
-#                args: ['--dockerfile=Dockerfile','--destination=tfjxlegibledog.azurecr.io/potato', "--context=/workspace/source"]
-                command: /bin/cat
-                args: ['/tekton/home/.docker/config.json']
-                env:
-                  - name: DOCKER_CONFIG
-                    value: /tekton/home/.docker
+                args: ['--dockerfile=Dockerfile','--destination=tfjxlegibledog.azurecr.io/potato', "--context=/workspace/source"]
